--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "cypress": "cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,3 +37,4 @@
     ]
   }
 }
+
